<resources>
    <string name="app_name">Remind Me</string>
    <string name="option_about">About us</string>
    <string name="option_share">Share</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="preference_notification_category">Notification Setting</string>
    <string name="checkbox_vibrate">Vibrate</string>
    <string name="checkbox_sound">Sound</string>
    <string name="checkbox_LED">LED</string>
    <string name="checkbox_ongoing">Persistent</string>
    <string name="ongoing_detail">Prevent notification from being swiped away</string>
    <string name="action_settings">Settings</string>
    <string name="organisation">Digital Droid Solution</string>
    <string name="developer_name">Aamir Rashid</string>
    <string name="rate_app">Rate app</string>
    <string name="contact">Contact us</string>
    <string name="email">aamirrashid74040@gmail.com</string>
    <string name="send_email">Send Email</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.digitaldroid.aamir.tablayout</string>
    <string name="checkbox_popup">Show alert popup</string>
    <string name="popup_detail">Show alert popup on screen when screen is turn on</string>
    <string name="version_no">Version 1.0</string>
</resources>