<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/preference_notification_category">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkBoxVibrate"
            android:title="@string/checkbox_vibrate"/>
        <RingtonePreference
            android:showDefault="true"
            android:key="NotificationSound"
            android:title="@string/checkbox_sound"
            android:defaultValue="content://settings/system/notification_sound"
            android:ringtoneType="notification" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkBoxLED"
            android:title="@string/checkbox_LED"/>
        <CheckBoxPreference
            android:key="checkBoxOngoing"
            android:title="@string/checkbox_ongoing"
            android:summary="@string/ongoing_detail"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkBoxPopup"
            android:title="@string/checkbox_popup"
            android:summary="@string/popup_detail"/>
    </PreferenceCategory>
</PreferenceScreen>